--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<!-- 2016-10-21 Fri 00:16 -->
+<!-- 2016-10-21 Fri 00:47 -->
 <meta  charset="utf-8">
 <meta  name="viewport" content="width=device-width, initial-scale=1">
 <title>Data</title>
@@ -154,51 +154,21 @@ for the JavaScript code in this tag.
  }
 /*]]>*///-->
 </script>
-<script type="text/x-mathjax-config">
-    MathJax.Hub.Config({
-        displayAlign: "center",
-        displayIndent: "0em",
-
-        "HTML-CSS": { scale: 100,
-                        linebreaks: { automatic: "false" },
-                        webFont: "TeX"
-                       },
-        SVG: {scale: 100,
-              linebreaks: { automatic: "false" },
-              font: "TeX"},
-        NativeMML: {scale: 100},
-        TeX: { equationNumbers: {autoNumber: "AMS"},
-               MultLineWidth: "85%",
-               TagSide: "right",
-               TagIndent: ".8em"
-             }
-});
-</script>
-<script type="text/javascript"
-        src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS_HTML"></script>
 </head>
 <body>
 <div id="content">
-<h1 class="title">Data
-<br>
-<span class="subtitle">Apontamentos</span>
-</h1>
+<h1 class="title">Data</h1>
 
 <div id="outline-container-orgheadline1" class="outline-2">
-<h2 id="orgheadline1">Home</h2>
+<h2 id="orgheadline1">Considerações Iniciais</h2>
 <div class="outline-text-2" id="text-orgheadline1">
 <p>
 Algumas <b>considerações</b> sobre este website. 
 </p>
 
 <ul class="org-ul">
-<li>O site apresenta algumas das notas que eu fui tirando ao longo dos
-anos, tanto na vida académica como profissional.</li>
-<li>As notas são feitas em acordo com os <a href="https://www.lnec.pt/pt/servicos/normalizacao-e-regulamentacao/normalizacao/ct-115-eurocodigos-estruturais/">Eurocódigos</a> e com base de
-aplicação em Portugal.</li>
 <li>O site é escrito em <a href="https://orgmode.org/">Org-Mode</a> sendo depois compilado para
-<code>html</code>. Muitas das notas foram preparadas originalmente em <code>latex</code>
-para serem depois compiladas para <code>pdf</code> .</li>
+<code>html</code>.</li>
 </ul>
 
 
@@ -219,25 +189,9 @@ apresentação .
 
 
 <p>
-Salientar que eu não sou programador nem tão pouco tenho alguma base
-no assunto. No entanto, tanto por curiosidade como por causa do
-beneficio cientifico da análise dos sistemas estruturais de uma obra
-por linguagens
-como o <a href="https://www.python.org/">python</a>, <a href="https://www.r-project.org/">R</a>, <a href="https://daringfireball.net/projects/markdown/">markdown</a>, <a href="https://www.latex-project.org/">Latex</a>, etc, assim como na preparação da
-documentação de um projeto através destas mesmas linguagens informáticas,
-tenho vindo no último ano a dedicar-me ao estudo destas e às formas
-como elas me podem ajudar tanto na vida académica como profissional.
-</p>
-
-<p>
 O principal objectivo deste website é para uso próprio, de forma a eu
-poder aceder aos meus apontamentos na internet. As várias secções, são
-um conjunto de apontamentos, que foram tirados de uma forma rápida, sem ter preocupação com a
-qualidade da escrita e por vezes, com erros no conteúdo FIXME, os quais, eu
-estou agora a tentar rever. Qualquer pessoa é livre de aceder e usar o
-conteúdo que aqui existe, tanto para uso privado como comercial.
+poder aceder aos meus apontamentos e na internet.
 </p>
-
 
 <div class="tip">
 <p>
@@ -250,166 +204,30 @@ existe uma sobrecarga de informação no visualizador.
 </div>
 
 
-<div id="outline-container-orgheadline2" class="outline-3">
-<h3 id="orgheadline2">Org-Mode e Python</h3>
-<div class="outline-text-3" id="text-orgheadline2">
-<p alt="snake" title="python logo" align="left" width="100">
-<img src="https://www.python.org/static/opengraph-icon-200x200.png" alt="snake" title="python logo" align="left" width="100">
-Por si só, a linguagem informática <a href="https://www.python.org/">python</a>, não tem grande significado para
-mim. É certo que se consegue fazer excelentes análises através desta 
-ferramenta, mas falando na qualidade de um <i>não programador</i>, não tenho
-os conhecimentos nem o tempo, para elaborar longas listas de código
-(informático) para poder executar um processo complexo de análise. 
-No entanto, se junto com <code>python</code>, usarmos um editor de texto como o 
-<a href="https://www.gnu.org/software/emacs/">emacs</a>, mais propriamente o sistema <a href="http://orgmode.org/">org-mode</a> do <code>emacs</code>, ficamos na posse
-de uma ferramenta que em muito supera qualquer um dos produtos da
-<a href="https://products.office.com/pt-pt/student/office-in-education">Microsoft</a>.
-Todo este website é escrito em <a href="http://orgmode.org/">org-mode</a> do <a href="https://www.gnu.org/software/emacs/">emacs</a> sendo depois passado
-para a internet e guardado no <a href="https://github.com/">GitHub</a>. 
-</p>
 
-
-<p>
-<span class="underline">A primeira equação que se aprende na prática de betão armado:</span> 
-</p>
-
-<p>
-\[{ \mu  }=\frac { { M }_{ rd } }{ b\times { d }^{ 2 }\times { f }_{ cd } }\] 
-</p>
+<div id="outline-container-orgheadline6" class="outline-3">
+<h3 id="orgheadline6">Lista de tarefas:</h3>
+<div class="outline-text-3" id="text-orgheadline6">
+</div><div id="outline-container-orgheadline2" class="outline-4">
+<h4 id="orgheadline2"><span class="done DONE">DONE</span> Atualizar formatação latex</h4>
 </div>
-
-
 
 <div id="outline-container-orgheadline3" class="outline-4">
-<h4 id="orgheadline3">VIGA-Armadura em flexão</h4>
-<div class="outline-text-4" id="text-orgheadline3">
-<p>
-Um exemplo simples da utilização de <a href="https://www.python.org/">python</a>, é no cálculo armadura
-necessária em uma viga à flexão. Os cálculos em sí não tem nada de
-complicado e qualquer máquina de calcular os faz. Mas obter os
-resultados em forma de tabela, prontos a serem incluídos em
-documentação da obra ou a serem compartilhados aqui neste website, é
-uma grande <i>mais valia</i>.
-</p>
-
-<p>
-Os valores das variáveis foram introduzidos em uma outra secção do
-documento, e por isso não são apresentados no código em python. No
-entanto, elas são apresentadas no resultado final. De qualquer maneira
-é apresentado no bloco que se segue, os seus valores:
-</p>
-
-<div class="org-src-container">
-
-<pre class="src src-org" id="orgsrcblock1">Vari&#225;veis:
-+ Mrd=61.2
-+ h=0.5 
-+ fcd=13.33 
-+ b=.3
-+ fsyd=348
-+ fctm=2.2
-+ fyk=400
-</pre>
+<h4 id="orgheadline3"><span class="todo IN_PROGRESS">IN-PROGRESS</span> Revisão dos dados</h4>
 </div>
 
-<p>
-O bloco aonde são introduzidas as fórmulas necessárias para o
-desenvolvimento do cálculo:
-</p>
-
-<div class="org-src-container">
-
-<pre class="src src-python" id="orgsrcblock2"><span style="color: #932092;">import</span> pandas <span style="color: #932092;">as</span> pd
-<span style="color: #932092;">from</span> sympy <span style="color: #932092;">import</span> *
-<span style="color: #a0522d;">d</span>=0.9*h
-<span style="color: #a0522d;">Ac</span>=h*b
-<span style="color: #a0522d;">u</span>=<span style="color: #483d8b;">float</span>(Mrd/(fcd*1000*d**2*b))
-<span style="color: #a0522d;">W</span>=1-sqrt(1-2*u)
-<span style="color: #a0522d;">As</span>= (W*b*d*(fcd/fsyd)*10**4).n(2)
-<span style="color: #a0522d;">Asmax</span>=(0.04*Ac*10**4)
-<span style="color: #a0522d;">Asmin</span>= (0.26*(fctm/fyk)*b*d*10**4)
-<span style="color: #a0522d;">Asmin_Verif</span>=0.0013*b*d*10**4
-<span style="color: #932092;">def</span> <span style="color: #0432fe;">verifica</span>(Asmin):
-    <span style="color: #932092;">if</span> Asmin &gt;= 0.0013*b*d*100:
-        <span style="color: #a0522d;">verifica</span> = <span style="color: #932092;">print</span> (<span style="color: #8b2252;">"Verifica Condicoes pelo EC"</span>)
-    <span style="color: #932092;">else</span>:
-        <span style="color: #a0522d;">verifica</span> = <span style="color: #932092;">print</span>(<span style="color: #8b2252;">"NAO VERIFICA"</span>)
-    <span style="color: #932092;">return</span> verifica
-<span style="color: #a0522d;">Descricao</span>=[<span style="color: #8b2252;">"Momento Resistente (kN/m)"</span>,<span style="color: #8b2252;">"Altura Total h (m)"</span>, <span style="color: #8b2252;">"d (m)"</span>, 
-           <span style="color: #8b2252;">"fcd (mPa)"</span>, <span style="color: #8b2252;">"b (m)"</span>,<span style="color: #8b2252;">"Momento Reduzido "</span>, 
-           <span style="color: #8b2252;">"W"</span>, <span style="color: #8b2252;">"fsyd (mPa)"</span>, <span style="color: #8b2252;">"Area armadura (cm2)"</span>, <span style="color: #8b2252;">"Area de Betao, m2"</span>, 
-           <span style="color: #8b2252;">"Area Maxima armadura,cm2"</span>, <span style="color: #8b2252;">"fctm, mPa"</span>, <span style="color: #8b2252;">"fyk, mPa"</span>,
-           <span style="color: #8b2252;">"Area minima armadura, cm2"</span>, <span style="color: #8b2252;">"Verificacao Area minima, cm2"</span>]
-<span style="color: #a0522d;">Resultados</span>=[Mrd, h, d, fcd, b, u, W, fsyd, As, Ac, 
-            Asmax,fctm, fyk, Asmin, Asmin_Verif ]
-<span style="color: #a0522d;">data</span> = {<span style="color: #8b2252;">'Descricao'</span> : pd.Series(Descricao), 
-        <span style="color: #8b2252;">'Resultados'</span> : pd.Series(Resultados)}
-<span style="color: #a0522d;">tabela</span> = pd.DataFrame(data)
-<span style="color: #932092;">print</span>(tabela)
-<span style="color: #932092;">print</span>(<span style="color: #8b2252;">"Verificacao:  As,min = "</span>,Asmin, <span style="color: #8b2252;">" cm2 &gt; 0,0013xbtxd = "</span>, Asmin_Verif, <span style="color: #8b2252;">"cm2"</span> )
-verifica(Asmin)
-</pre>
-</div>
-
-<p>
-E por fim obtemos uma tabela com os vários resultados. A partir do
-momento que o bloco da introdução de dados está feito, pode ser
-reaplicado em outras vigas que estejam sujeitas (neste caso somente) à
-flexão.
-</p>
-
-<pre class="example">
-                       Descricao          Resultados
-0      Momento Resistente (kN/m)                61.2
-1             Altura Total h (m)                 0.5
-2                          d (m)                0.45
-3                      fcd (mPa)               13.33
-4                          b (m)                 0.3
-5              Momento Reduzido            0.0755744
-6                              W  0.0786688425629442
-7                     fsyd (mPa)                 348
-8            Area armadura (cm2)                 4.1
-9              Area de Betao, m2                0.15
-10      Area Maxima armadura,cm2                  60
-11                     fctm, mPa                 2.2
-12                      fyk, mPa                 400
-13     Area minima armadura, cm2              1.9305
-14  Verificacao Area minima, cm2               1.755
-Verificacao:  As,min =  1.9305000000000003  cm2 &gt; 0,0013xbtxd =  1.7550000000000001 cm2
-Verifica Condicoes pelo EC
-</pre>
-
-<p>
-Os cálculos foram feitos de acordo com as normas do <a href="http://www.lnec.pt/pt/servicos/normalizacao-e-regulamentacao/normalizacao/ct-115-eurocodigos-estruturais/">Eurocódigo</a>.
-</p>
-</div>
-</div>
-</div>
-
-
-<div id="outline-container-orgheadline8" class="outline-3">
-<h3 id="orgheadline8">Lista de tarefas:</h3>
-<div class="outline-text-3" id="text-orgheadline8">
-</div><div id="outline-container-orgheadline4" class="outline-4">
-<h4 id="orgheadline4"><span class="done DONE">DONE</span> Atualizar formatação latex</h4>
+<div id="outline-container-orgheadline4" class="outline-4">
+<h4 id="orgheadline4"><span class="todo IN_PROGRESS">IN-PROGRESS</span> Adicionar secção <span class="underline">Projeto</span></h4>
 </div>
 
 <div id="outline-container-orgheadline5" class="outline-4">
-<h4 id="orgheadline5"><span class="todo IN_PROGRESS">IN-PROGRESS</span> Revisão dos dados</h4>
-</div>
-
-<div id="outline-container-orgheadline6" class="outline-4">
-<h4 id="orgheadline6"><span class="todo IN_PROGRESS">IN-PROGRESS</span> Adicionar secção <span class="underline">Projeto</span></h4>
-</div>
-
-<div id="outline-container-orgheadline7" class="outline-4">
-<h4 id="orgheadline7"><span class="todo TODO">TODO</span> Adicionar referências dos trabalhos aonde necessário</h4>
+<h4 id="orgheadline5"><span class="todo TODO">TODO</span> Adicionar referências dos trabalhos aonde necessário</h4>
 </div>
 </div>
 </div>
 
-<div id="outline-container-orgheadline9" class="outline-2">
-<h2 id="orgheadline9">Data</h2>
+<div id="outline-container-orgheadline7" class="outline-2">
+<h2 id="orgheadline7">Data</h2>
 </div>
 </div>
 </body>
