--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<!-- 2016-10-21 Fri 20:33 -->
+<!-- 2016-10-21 Fri 20:40 -->
 <meta  charset="utf-8">
 <meta  name="viewport" content="width=device-width, initial-scale=1">
 <title>Base de dados</title>
@@ -195,6 +195,13 @@ Prolonged use may cause addiction!
 </p>
 
 </div>
+
+
+
+<div class="figure">
+<p><img src="images/graph2.png" alt="graph2.png">
+</p>
+</div>
 </div>
 </div>
 
@@ -210,7 +217,7 @@ See h
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: Luis Moura</p>
-<p class="date">Created: 2016-10-21 Fri 20:33</p>
+<p class="date">Created: 2016-10-21 Fri 20:40</p>
 <p class="validation"><a href="http://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
