--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<!-- 2016-10-22 Sat 16:54 -->
+<!-- 2016-10-22 Sat 19:29 -->
 <meta  charset="utf-8">
 <meta  name="viewport" content="width=device-width, initial-scale=1">
 <title>Empreendimento turístico</title>
@@ -220,14 +220,14 @@ espaço virtual, em que fosse possível a partilha de dados e informação
 referentes à criação de um Empreendimento. Este trabalho está inserido
 no curso de licenciatura de Engenharia Civil e consiste na criação,
 desenvolvimento e controlo das diversas fases de um Empreendimento, na
-óptica de um engenheiro civil.
+óptica de um engenheiro civil. 
 </p>
 
 <p>
 Importa desde já referir, que o texto deste website <b>é feito
 na condição de Promotor</b>, em que são desenvolvidos inicialmente os
 primeiros passos do Empreendimento, indo depois progredindo, com a
-análise financeira, qualitativa e temporal.
+análise financeira, qualitativa e temporal.  
 </p>
 
 <p>
@@ -240,7 +240,7 @@ conjuntura que leva às escolhas e objetivos pretendidos.
 <p>
 Sendo livre o acesso do público em geral a este website, é importante referir que a
 informação que aqui consta, é para um projeto fictício, e que portanto não deverá ser
-usado como fonte de informação ou de apoio a nenhum trabalho.
+usado como fonte de informação ou de apoio a nenhum trabalho. 
 </p>
 
 </div>
@@ -248,7 +248,7 @@ usado como fonte de informação ou de apoio a nenhum trabalho.
 
 <div class="warning">
 <p>
-Este website encontra-se em atualização
+Este website encontra-se em atualização 
 </p>
 
 </div>
@@ -276,7 +276,7 @@ Empreendimento.
 <p>
 O empreendimento consiste na instalação e exploração de uma <b>aldeia
 hoteleira e turística</b>, no concelho de <a href="https://pt.wikipedia.org/wiki/Porto_de_M%C3%B3s">Porto de Mós</a>, em plena <a href="https://pt.wikipedia.org/wiki/Parque_Natural_das_Serras_de_Aire_e_Candeeiros">Serra de
-Aire e Candeeiros</a>, perto do percurso pedestre da <a href="http://www.municipio-portodemos.pt/page.aspx?id=218">Fórnea</a>.
+Aire e Candeeiros</a>, perto do percurso pedestre da <a href="http://www.municipio-portodemos.pt/page.aspx?id=218">Fórnea</a>. 
 </p>
 
 <p>
@@ -300,13 +300,19 @@ vista na Figura 1 . [<sup><a id="fnr.1" class="footref" href="#fn.1">1</a></sup>
 <div class="note">
 <p>
 A localização georreferenciada do projeto, pode ser vista <a href="./Georef.html">aqui</a> (abre uma nova janela). No topo esquerdo da nova janela, tem um botão
-com "show code".
+com "show code". 
 O Pressionar desse betão faz com seja apresentado o
 código em <code>python</code> usado na elaboração da Georreferenciação, com os
-valores das latitudes e longitudes para o projeto.
+valores das latitudes e longitudes para o projeto. 
 </p>
 
 </div>
+
+<p>
+A figura <a href="#orgparagraph2">2</a>, é o mapa da localização do projeto, estando este
+localizado a poucos kms a Sul de Porto de Mós, no Distrito de Leiria.
+</p>
+
 
 
 
@@ -315,7 +321,15 @@ valores das latitudes e longitudes para o projeto.
 </p>
 <p><span class="figure-number">Figure 2:</span> Mapa regional com a localização do projeto</p>
 </div>
+
+
+<p>
+Este mapa e outros mais, também pode ser visto <a href="https://nbviewer.jupyter.org/gist/loumoura/50ec2cb00ba852c266b694d7e44dfc59">aqui</a>, caso exista algum problema com a
+conversão de <code>python</code> para <code>html</code> no link acima referenciado na
+"Note".
+</p>
 </div>
+
 
 <div id="outline-container-orgheadline3" class="outline-5">
 <h5 id="orgheadline3">Limites da Propriedade</h5>
@@ -388,7 +402,7 @@ A imagem será um dos pontos mais importantes do empreendimento, com
 especial valorização ao modo como o projeto se vai integrar tanto na
 comunidade local, como no habitat natural da zona. Torna-se assim
 vital que os níveis de qualidade sejam estabelecidos no Projeto de
-Investimento, servindo de base à restante documentação:
+Investimento, servindo de base à restante documentação:        
 </p>
 
 <ul class="org-ul">
@@ -484,7 +498,7 @@ Devido ao tipo de características do Empreendimento, o público alvo é
 bem especifico, sendo de esperar que seja uma clientela jovem,
 com gosto pela natureza, e por turistas, que quer visitando a Serra de
 Aire ou Fátima, estando esta última a 30kms de distância, decidam
-pernoitar na aldeia.
+pernoitar na aldeia. 
 É de acordo com o gosto e necessidades destas pessoas que as várias
 unidades serão decoradas, algo que se espera não tenha um preço muito
 significativo.
@@ -708,7 +722,7 @@ pelo USGC</div></div>
 </div></div>
 <div id="postamble" class="status">
 <p class="author">Author: Luis Moura</p>
-<p class="date">Created: 2016-10-22 Sat 16:54</p>
+<p class="date">Created: 2016-10-22 Sat 19:29</p>
 <p class="validation"><a href="http://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
