--- a/Georef.html
+++ b/Georef.html
@@ -11776,13 +11776,13 @@ div#notebook {
 <div class="cell border-box-sizing text_cell rendered">
 <div class="prompt input_prompt">
 </div>
-<form action="http://blocos.getforge.io">
+<form action="index.html">
     <input type="submit" value="Página Anterior" />
 </form>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <p>
-<p>  
+<p>
 <h1 id="Vista-Regional-da-Localiza&#231;&#227;o-do-Empreendimento">Vista Regional da Localiza&#231;&#227;o do Empreendimento<a class="anchor-link" href="#Vista-Regional-da-Localiza&#231;&#227;o-do-Empreendimento">&#182;</a></h1>
 </div>
 </div>
