--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<!-- 2016-10-22 Sat 19:53 -->
+<!-- 2016-10-22 Sat 19:57 -->
 <meta  charset="utf-8">
 <meta  name="viewport" content="width=device-width, initial-scale=1">
 <title>Empreendimento turístico</title>
@@ -288,7 +288,7 @@ vista na Figura 1 . [<sup><a id="fnr.1" class="footref" href="#fn.1">1</a></sup>
 
 
 <div id="orgparagraph1" class="figure">
-<p><img src="./images/container_home.png" alt="casa" title="Contentor" align="center">
+<p><img src="./images/container_home.png" alt="casa" title="Contentor" align="center" width="600">
 </p>
 <p><span class="figure-number">Figure 1:</span> Exemplo de uma das casas a serem construídas</p>
 </div>
@@ -317,7 +317,7 @@ localizado a poucos kms a Sul de Porto de Mós, no Distrito de Leiria.
 
 
 <div id="orgparagraph2" class="figure">
-<p><img src="./images/georef.png" alt="mapa regional" title="mapa" align="center">
+<p><img src="./images/georef.png" alt="mapa regional" title="mapa" align="center" width="600">
 </p>
 <p><span class="figure-number">Figure 2:</span> Mapa regional com a localização do projeto</p>
 </div>
@@ -722,7 +722,7 @@ pelo USGC</div></div>
 </div></div>
 <div id="postamble" class="status">
 <p class="author">Author: Luis Moura</p>
-<p class="date">Created: 2016-10-22 Sat 19:53</p>
+<p class="date">Created: 2016-10-22 Sat 19:57</p>
 <p class="validation"><a href="http://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
