--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<!-- 2016-10-27 Thu 01:49 -->
+<!-- 2016-10-27 Thu 17:16 -->
 <meta  charset="utf-8">
 <meta  name="viewport" content="width=device-width, initial-scale=1">
 <title>Empreendimento turístico</title>
@@ -162,42 +162,42 @@ for the JavaScript code in this tag.
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#orgheadline1">1. <span class="todo IN_PROGRESS">IN-PROGRESS</span> Introdução</a></li>
-<li><a href="#orgheadline10">2. <span class="todo IN_PROGRESS">IN-PROGRESS</span> A Ideia e a Equipa</a>
+<li><a href="#orgheadline2">1. <span class="todo IN_PROGRESS">IN-PROGRESS</span> Introdução</a></li>
+<li><a href="#orgheadline11">2. <span class="todo IN_PROGRESS">IN-PROGRESS</span> A Ideia e a Equipa</a>
 <ul>
-<li><a href="#orgheadline7">2.1. O Empreendimento</a></li>
-<li><a href="#orgheadline8">2.2. Gestor de Projeto</a></li>
-<li><a href="#orgheadline9">2.3. Consultores</a></li>
+<li><a href="#orgheadline8">2.1. O Empreendimento</a></li>
+<li><a href="#orgheadline9">2.2. Gestor de Projeto</a></li>
+<li><a href="#orgheadline10">2.3. Consultores</a></li>
 </ul>
 </li>
-<li><a href="#orgheadline16">3. <span class="todo TODO">TODO</span> Definição do Ambito</a>
+<li><a href="#orgheadline17">3. <span class="todo TODO">TODO</span> Definição do Ambito</a>
 <ul>
-<li><a href="#orgheadline11">3.1. Caraterísticas e Objetivos</a></li>
-<li><a href="#orgheadline12">3.2. Modelo de Funcionamento</a></li>
-<li><a href="#orgheadline14">3.3. Método de Construção</a></li>
-<li><a href="#orgheadline15">3.4. Análise SWOT</a></li>
+<li><a href="#orgheadline12">3.1. Caraterísticas e Objetivos</a></li>
+<li><a href="#orgheadline13">3.2. Modelo de Funcionamento</a></li>
+<li><a href="#orgheadline15">3.3. Método de Construção</a></li>
+<li><a href="#orgheadline16">3.4. Análise SWOT</a></li>
 </ul>
 </li>
-<li><a href="#orgheadline17">4. <span class="todo TODO">TODO</span> Enquadramento Legal</a></li>
-<li><a href="#orgheadline18">5. <span class="todo TODO">TODO</span> Quantificação de Custos</a></li>
-<li><a href="#orgheadline19">6. <span class="todo TODO">TODO</span> Calendarização</a></li>
-<li><a href="#orgheadline24">7. <span class="todo TODO">TODO</span> Estudos de Viabilidade</a>
+<li><a href="#orgheadline18">4. <span class="todo TODO">TODO</span> Enquadramento Legal</a></li>
+<li><a href="#orgheadline19">5. <span class="todo TODO">TODO</span> Quantificação de Custos</a></li>
+<li><a href="#orgheadline20">6. <span class="todo TODO">TODO</span> Calendarização</a></li>
+<li><a href="#orgheadline25">7. <span class="todo TODO">TODO</span> Estudos de Viabilidade</a>
 <ul>
-<li><a href="#orgheadline20">7.1. Viabilidade Técnica</a></li>
-<li><a href="#orgheadline21">7.2. Viabilidade Ambiental</a></li>
-<li><a href="#orgheadline22">7.3. Viabilidade Politíca-Social</a></li>
-<li><a href="#orgheadline23">7.4. Viabilidade Económica e Financeira</a></li>
+<li><a href="#orgheadline21">7.1. Viabilidade Técnica</a></li>
+<li><a href="#orgheadline22">7.2. Viabilidade Ambiental</a></li>
+<li><a href="#orgheadline23">7.3. Viabilidade Politíca-Social</a></li>
+<li><a href="#orgheadline24">7.4. Viabilidade Económica e Financeira</a></li>
 </ul>
 </li>
-<li><a href="#orgheadline25">8. <span class="todo TODO">TODO</span> Avaliação Financeira</a></li>
-<li><a href="#orgheadline26">9. <span class="todo TODO">TODO</span> Organograma de Gestão do Empreendimento</a></li>
-<li><a href="#orgheadline27">10. <span class="todo TODO">TODO</span> Conclusão</a></li>
+<li><a href="#orgheadline26">8. <span class="todo TODO">TODO</span> Avaliação Financeira</a></li>
+<li><a href="#orgheadline27">9. <span class="todo TODO">TODO</span> Organograma de Gestão do Empreendimento</a></li>
+<li><a href="#orgheadline28">10. <span class="todo TODO">TODO</span> Conclusão</a></li>
 </ul>
 </div>
 </div>
 
-<div id="outline-container-orgheadline1" class="outline-2">
-<h2 id="orgheadline1"><span class="section-number-2">1</span> <span class="todo IN_PROGRESS">IN-PROGRESS</span> Introdução</h2>
+<div id="outline-container-orgheadline2" class="outline-2">
+<h2 id="orgheadline2"><span class="section-number-2">1</span> <span class="todo IN_PROGRESS">IN-PROGRESS</span> Introdução</h2>
 <div class="outline-text-2" id="text-1">
 <div class="sidebar">
 <p>
@@ -254,10 +254,49 @@ Este website encontra-se em atualização.
 
 </div>
 </div>
+
+<div id="outline-container-orgheadline1" class="outline-4">
+<h4 id="orgheadline1">Websites de Apoio a este documento</h4>
+<div class="outline-text-4" id="text-orgheadline1">
+<table id="orgtable1" align="center">
+
+
+<colgroup>
+<col  class="org-left">
+
+<col  class="org-left">
+
+<col  class="org-left">
+</colgroup>
+<thead>
+<tr>
+<th scope="col" class="org-left">Nome</th>
+<th scope="col" class="org-left">Website</th>
+<th scope="col" class="org-left">Descrição</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td class="org-left">Gestão de Empreendimento Fases de execução</td>
+<td class="org-left"><a href="./fases.html">link</a></td>
+<td class="org-left">fases Empreendimento</td>
+</tr>
+
+<tr>
+<td class="org-left">Georreferenciação</td>
+<td class="org-left"><a href="./Georef.html">link</a></td>
+<td class="org-left">Localização</td>
+</tr>
+</tbody>
+</table>
+</div>
+</div>
 </div>
 
-<div id="outline-container-orgheadline10" class="outline-2">
-<h2 id="orgheadline10"><span class="section-number-2">2</span> <span class="todo IN_PROGRESS">IN-PROGRESS</span> A Ideia e a Equipa</h2>
+
+
+<div id="outline-container-orgheadline11" class="outline-2">
+<h2 id="orgheadline11"><span class="section-number-2">2</span> <span class="todo IN_PROGRESS">IN-PROGRESS</span> A Ideia e a Equipa</h2>
 <div class="outline-text-2" id="text-2">
 <p>
 Elaboração provisória dos objetivos do Empreendimento, assim como
@@ -277,8 +316,11 @@ acordo com os apontamentos do Professor António Duarte.
 </div>
 
 
-<div id="outline-container-orgheadline7" class="outline-3">
-<h3 id="orgheadline7"><span class="section-number-3">2.1</span> O Empreendimento</h3>
+
+
+
+<div id="outline-container-orgheadline8" class="outline-3">
+<h3 id="orgheadline8"><span class="section-number-3">2.1</span> O Empreendimento</h3>
 <div class="outline-text-3" id="text-2-1">
 <p>
 O empreendimento consiste na instalação e exploração de uma <b>aldeia
@@ -301,9 +343,9 @@ vista na Figura 1 . <sup><a id="fnr.1" class="footref" href="#fn.1">1</a></sup>
 </div>
 </div>
 
-<div id="outline-container-orgheadline2" class="outline-4">
-<h4 id="orgheadline2">Georreferenciação do projeto:</h4>
-<div class="outline-text-4" id="text-orgheadline2">
+<div id="outline-container-orgheadline3" class="outline-4">
+<h4 id="orgheadline3">Georreferenciação do projeto:</h4>
+<div class="outline-text-4" id="text-orgheadline3">
 <div class="note">
 <p>
 A localização georreferenciada do projeto, pode ser vista <a href="./Georef.html">aqui</a> (abre
@@ -340,14 +382,14 @@ conversão de <code>python</code> para <code>html</code> no link acima referenci
 </div>
 
 
-<div id="outline-container-orgheadline3" class="outline-5">
-<h5 id="orgheadline3">Limites da Propriedade</h5>
-<div class="outline-text-5" id="text-orgheadline3">
+<div id="outline-container-orgheadline4" class="outline-5">
+<h5 id="orgheadline4">Limites da Propriedade</h5>
+<div class="outline-text-5" id="text-orgheadline4">
 <p>
 Georreferenciação de pontos ao longo do limite da propriedade
 </p>
 
-<table id="orgtable1" align="center">
+<table id="orgtable2" align="center">
 
 
 <colgroup>
@@ -403,9 +445,9 @@ Georreferenciação de pontos ao longo do limite da propriedade
 
 
 
-<div id="outline-container-orgheadline4" class="outline-4">
-<h4 id="orgheadline4">Qualidade:</h4>
-<div class="outline-text-4" id="text-orgheadline4">
+<div id="outline-container-orgheadline5" class="outline-4">
+<h4 id="orgheadline5">Qualidade:</h4>
+<div class="outline-text-4" id="text-orgheadline5">
 <p>
 A imagem será um dos pontos mais importantes do empreendimento, com
 especial valorização ao modo como o projeto se vai integrar tanto na
@@ -438,9 +480,9 @@ uso de algum software em especial.</li>
 
 
 
-<div id="outline-container-orgheadline5" class="outline-4">
-<h4 id="orgheadline5">Tempo:</h4>
-<div class="outline-text-4" id="text-orgheadline5">
+<div id="outline-container-orgheadline6" class="outline-4">
+<h4 id="orgheadline6">Tempo:</h4>
+<div class="outline-text-4" id="text-orgheadline6">
 <p>
 São diversas as fases do Empreendimento, sendo mais tarde
 desenvolvido, com a colaboração de toda a equipa, uma análise mais
@@ -448,7 +490,7 @@ aprofundada. Neste momento, é interesse desenvolver as metas em termos
 gerais do que é pretendido do projeto.
 </p>
 
-<table id="orgtable2">
+<table id="orgtable3">
 <caption class="t-above"><span class="table-number">Table 1:</span> Metas</caption>
 
 <colgroup>
@@ -499,9 +541,9 @@ gerais do que é pretendido do projeto.
 
 
 
-<div id="outline-container-orgheadline6" class="outline-4">
-<h4 id="orgheadline6">Custo:</h4>
-<div class="outline-text-4" id="text-orgheadline6">
+<div id="outline-container-orgheadline7" class="outline-4">
+<h4 id="orgheadline7">Custo:</h4>
+<div class="outline-text-4" id="text-orgheadline7">
 <p>
 Devido ao tipo de características do Empreendimento, o público alvo é
 bem especifico, sendo de esperar que seja uma clientela jovem,
@@ -515,7 +557,7 @@ significativo.
 
 
 
-<table id="orgtable3">
+<table id="orgtable4">
 <caption class="t-above"><span class="table-number">Table 2:</span> Previsão Orçamental para fase inicial</caption>
 
 <colgroup>
@@ -573,13 +615,13 @@ significativo.
 </table>
 
 <p>
-A tabela <a href="#orgtable3">2</a> apresenta os custos esperados até ao inicio das
+A tabela <a href="#orgtable4">2</a> apresenta os custos esperados até ao inicio das
 atividades de exploração. A este valor, há que depois acrescentar as despensas de
 pessoal e manutenção, para manter em funcionamento as operações
 diárias na aldeia. O
 valor Total das despesas na fase inicial do Empreendimento, será
 repartido por aproximadamente dois anos, como estimado na tabela
-<a href="#orgtable2">1</a>.
+<a href="#orgtable3">1</a>.
 </p>
 </div>
 </div>
@@ -587,8 +629,8 @@ repartido por aproximadamente dois anos, como estimado na tabela
 
 
 
-<div id="outline-container-orgheadline8" class="outline-3">
-<h3 id="orgheadline8"><span class="section-number-3">2.2</span> Gestor de Projeto</h3>
+<div id="outline-container-orgheadline9" class="outline-3">
+<h3 id="orgheadline9"><span class="section-number-3">2.2</span> Gestor de Projeto</h3>
 <div class="outline-text-3" id="text-2-2">
 <ul class="org-ul">
 <li>Sendo este um projeto que pretende alcançar a certificação LEED, um
@@ -614,8 +656,8 @@ compartilhar, alterar, rever e criar o Projeto em conjunto.</li>
 
 
 
-<div id="outline-container-orgheadline9" class="outline-3">
-<h3 id="orgheadline9"><span class="section-number-3">2.3</span> Consultores</h3>
+<div id="outline-container-orgheadline10" class="outline-3">
+<h3 id="orgheadline10"><span class="section-number-3">2.3</span> Consultores</h3>
 <div class="outline-text-3" id="text-2-3">
 <p>
 Os consultores deverão integrar a Equipa de Projeto, desde o início, e
@@ -624,22 +666,11 @@ na Aldeia, uma nova equipa deve ser formada, de acordo com as
 necessidades das operações.
 </p>
 <ul class="org-ul">
-<li>Engenheiro do ambiente, de modo a aconselhar na integração do
+<li><b>Engenheiro do ambiente</b>, de modo a aconselhar na integração do
 projeto no habitat local.</li>
-<li>Arquiteto com experiência em construção sustentável.</li>
-<li>Decorador de interiores com experiência em construção moderna.</li>
-<li>Empreiteiro: Devem ser convidados a estar presentes na Equipa de Projeto, duas
-empresas de empreiteiros. O convite é feito tendo em conta a
-<span class="underline">qualidade</span> do trabalho que eles realizam. Ambos os empreiteiros têm
-a posição de consultores, que para um deles se transformará posteriormente em
-contrato para obra, após apresentação de <i>Orçamento</i>, em que será escolhido,
-o que apresentar um menor preço.</li>
-<li>Representante da comunidade local</li>
-<li>Representante dos trabalhadores da Aldeia</li>
-<li>Advogado, com experiência a lidar com o Município de Porto de Mós e
-que tenha conhecimentos a lidar com projetos que fiquem perto de
-áreas protegidas, de modo a que seja facilitada a obtenção das
-várias licenças necessárias.</li>
+<li><b>Arquiteto</b> com experiência em construção sustentável.</li>
+<li><b>Decorador de interior</b> com experiência em construção moderna.</li>
+<li><b>Advogado</b>, com experiência a lidar com projetos de construção.</li>
 </ul>
 </div>
 </div>
@@ -647,72 +678,73 @@ várias licenças necessárias.</li>
 
 
 
-<div id="outline-container-orgheadline16" class="outline-2">
-<h2 id="orgheadline16"><span class="section-number-2">3</span> <span class="todo TODO">TODO</span> Definição do Ambito</h2>
+
+<div id="outline-container-orgheadline17" class="outline-2">
+<h2 id="orgheadline17"><span class="section-number-2">3</span> <span class="todo TODO">TODO</span> Definição do Ambito</h2>
 <div class="outline-text-2" id="text-3">
-</div><div id="outline-container-orgheadline11" class="outline-3">
-<h3 id="orgheadline11"><span class="section-number-3">3.1</span> Caraterísticas e Objetivos</h3>
+</div><div id="outline-container-orgheadline12" class="outline-3">
+<h3 id="orgheadline12"><span class="section-number-3">3.1</span> Caraterísticas e Objetivos</h3>
 </div>
 
-<div id="outline-container-orgheadline12" class="outline-3">
-<h3 id="orgheadline12"><span class="section-number-3">3.2</span> Modelo de Funcionamento</h3>
-</div>
-
-<div id="outline-container-orgheadline14" class="outline-3">
-<h3 id="orgheadline14"><span class="section-number-3">3.3</span> Método de Construção</h3>
-<div class="outline-text-3" id="text-3-3">
-</div><div id="outline-container-orgheadline13" class="outline-4">
-<h4 id="orgheadline13">Soluções Técnicas</h4>
-</div>
+<div id="outline-container-orgheadline13" class="outline-3">
+<h3 id="orgheadline13"><span class="section-number-3">3.2</span> Modelo de Funcionamento</h3>
 </div>
 
 <div id="outline-container-orgheadline15" class="outline-3">
-<h3 id="orgheadline15"><span class="section-number-3">3.4</span> Análise SWOT</h3>
+<h3 id="orgheadline15"><span class="section-number-3">3.3</span> Método de Construção</h3>
+<div class="outline-text-3" id="text-3-3">
+</div><div id="outline-container-orgheadline14" class="outline-4">
+<h4 id="orgheadline14">Soluções Técnicas</h4>
 </div>
 </div>
 
-<div id="outline-container-orgheadline17" class="outline-2">
-<h2 id="orgheadline17"><span class="section-number-2">4</span> <span class="todo TODO">TODO</span> Enquadramento Legal</h2>
+<div id="outline-container-orgheadline16" class="outline-3">
+<h3 id="orgheadline16"><span class="section-number-3">3.4</span> Análise SWOT</h3>
+</div>
 </div>
 
 <div id="outline-container-orgheadline18" class="outline-2">
-<h2 id="orgheadline18"><span class="section-number-2">5</span> <span class="todo TODO">TODO</span> Quantificação de Custos</h2>
+<h2 id="orgheadline18"><span class="section-number-2">4</span> <span class="todo TODO">TODO</span> Enquadramento Legal</h2>
 </div>
 
 <div id="outline-container-orgheadline19" class="outline-2">
-<h2 id="orgheadline19"><span class="section-number-2">6</span> <span class="todo TODO">TODO</span> Calendarização</h2>
+<h2 id="orgheadline19"><span class="section-number-2">5</span> <span class="todo TODO">TODO</span> Quantificação de Custos</h2>
 </div>
 
-<div id="outline-container-orgheadline24" class="outline-2">
-<h2 id="orgheadline24"><span class="section-number-2">7</span> <span class="todo TODO">TODO</span> Estudos de Viabilidade</h2>
-<div class="outline-text-2" id="text-7">
-</div><div id="outline-container-orgheadline20" class="outline-3">
-<h3 id="orgheadline20"><span class="section-number-3">7.1</span> Viabilidade Técnica</h3>
-</div>
-
-<div id="outline-container-orgheadline21" class="outline-3">
-<h3 id="orgheadline21"><span class="section-number-3">7.2</span> Viabilidade Ambiental</h3>
-</div>
-
-<div id="outline-container-orgheadline22" class="outline-3">
-<h3 id="orgheadline22"><span class="section-number-3">7.3</span> Viabilidade Politíca-Social</h3>
-</div>
-
-<div id="outline-container-orgheadline23" class="outline-3">
-<h3 id="orgheadline23"><span class="section-number-3">7.4</span> Viabilidade Económica e Financeira</h3>
-</div>
+<div id="outline-container-orgheadline20" class="outline-2">
+<h2 id="orgheadline20"><span class="section-number-2">6</span> <span class="todo TODO">TODO</span> Calendarização</h2>
 </div>
 
 <div id="outline-container-orgheadline25" class="outline-2">
-<h2 id="orgheadline25"><span class="section-number-2">8</span> <span class="todo TODO">TODO</span> Avaliação Financeira</h2>
+<h2 id="orgheadline25"><span class="section-number-2">7</span> <span class="todo TODO">TODO</span> Estudos de Viabilidade</h2>
+<div class="outline-text-2" id="text-7">
+</div><div id="outline-container-orgheadline21" class="outline-3">
+<h3 id="orgheadline21"><span class="section-number-3">7.1</span> Viabilidade Técnica</h3>
+</div>
+
+<div id="outline-container-orgheadline22" class="outline-3">
+<h3 id="orgheadline22"><span class="section-number-3">7.2</span> Viabilidade Ambiental</h3>
+</div>
+
+<div id="outline-container-orgheadline23" class="outline-3">
+<h3 id="orgheadline23"><span class="section-number-3">7.3</span> Viabilidade Politíca-Social</h3>
+</div>
+
+<div id="outline-container-orgheadline24" class="outline-3">
+<h3 id="orgheadline24"><span class="section-number-3">7.4</span> Viabilidade Económica e Financeira</h3>
+</div>
 </div>
 
 <div id="outline-container-orgheadline26" class="outline-2">
-<h2 id="orgheadline26"><span class="section-number-2">9</span> <span class="todo TODO">TODO</span> Organograma de Gestão do Empreendimento</h2>
+<h2 id="orgheadline26"><span class="section-number-2">8</span> <span class="todo TODO">TODO</span> Avaliação Financeira</h2>
 </div>
 
 <div id="outline-container-orgheadline27" class="outline-2">
-<h2 id="orgheadline27"><span class="section-number-2">10</span> <span class="todo TODO">TODO</span> Conclusão</h2>
+<h2 id="orgheadline27"><span class="section-number-2">9</span> <span class="todo TODO">TODO</span> Organograma de Gestão do Empreendimento</h2>
+</div>
+
+<div id="outline-container-orgheadline28" class="outline-2">
+<h2 id="orgheadline28"><span class="section-number-2">10</span> <span class="todo TODO">TODO</span> Conclusão</h2>
 </div>
 <div id="footnotes">
 <h2 class="footnotes">Footnotes: </h2>
@@ -731,7 +763,7 @@ pelo USGC</div></div>
 </div></div>
 <div id="postamble" class="status">
 <p class="author">Author: Luis Moura, Diana Rodrigues</p>
-<p class="date">Created: 2016-10-27 Thu 01:49</p>
+<p class="date">Created: 2016-10-27 Thu 17:16</p>
 <p class="validation"><a href="http://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
