--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<!-- 2016-11-01 Tue 20:03 -->
+<!-- 2016-11-01 Tue 20:22 -->
 <meta  charset="utf-8">
 <meta  name="viewport" content="width=device-width, initial-scale=1">
 <title>Empreendimento turístico</title>
@@ -162,7 +162,7 @@ for the JavaScript code in this tag.
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#orgheadline2">1. <span class="todo IN_PROGRESS">IN-PROGRESS</span> Introdução</a></li>
+<li><a href="#orgheadline2">1. <span class="done DONE">DONE</span> Introdução</a></li>
 <li><a href="#orgheadline14">2. <span class="todo IN_PROGRESS">IN-PROGRESS</span> A Ideia e a Equipa</a>
 <ul>
 <li><a href="#orgheadline10">2.1. O Empreendimento</a></li>
@@ -171,7 +171,7 @@ for the JavaScript code in this tag.
 <li><a href="#orgheadline13">2.4. Contratação</a></li>
 </ul>
 </li>
-<li><a href="#orgheadline21">3. <span class="todo TODO">TODO</span> Definição do Ambito</a>
+<li><a href="#orgheadline21">3. <span class="todo IN_PROGRESS">IN-PROGRESS</span> Definição do Ambito</a>
 <ul>
 <li><a href="#orgheadline15">3.1. Caraterísticas e Objetivos</a></li>
 <li><a href="#orgheadline16">3.2. Público Alvo</a></li>
@@ -199,7 +199,7 @@ for the JavaScript code in this tag.
 </div>
 
 <div id="outline-container-orgheadline2" class="outline-2">
-<h2 id="orgheadline2"><span class="section-number-2">1</span> <span class="todo IN_PROGRESS">IN-PROGRESS</span> Introdução</h2>
+<h2 id="orgheadline2"><span class="section-number-2">1</span> <span class="done DONE">DONE</span> Introdução</h2>
 <div class="outline-text-2" id="text-1">
 <div class="sidebar">
 <p>
@@ -721,7 +721,7 @@ serviços.
 
 
 <div id="outline-container-orgheadline21" class="outline-2">
-<h2 id="orgheadline21"><span class="section-number-2">3</span> <span class="todo TODO">TODO</span> Definição do Ambito</h2>
+<h2 id="orgheadline21"><span class="section-number-2">3</span> <span class="todo IN_PROGRESS">IN-PROGRESS</span> Definição do Ambito</h2>
 <div class="outline-text-2" id="text-3">
 
 <div id="orgparagraph3" class="figure">
@@ -815,7 +815,31 @@ vizinhança.
 <p>
 Pessoas que gostam de fazer caminhadas ou btt na serra, também
 facilmente encontram no complexo, um espaço que associa-se ao seu
-estilo de vida.
+estilo de vida, aonde poderão descansar e pernoitar, após um dia de
+exercício.
+</p>
+
+<p>
+Quando se analiza a população alvo pela faixa etária, o grupo de
+possíveis clientes deverá estar entre os 20 e os 65 anos. Esta
+afirmação baseia-se nas exigências físicas que normalmente estão
+associadas à vida campestre e às atividades ao ar livre.
+</p>
+
+<p>
+Quanto ao sexo, ambos os sexos devem utilizar de igual modo as nossas
+instalações, no entanto, o sexo masculino poderá ter uma maior
+incidência, devido a ser ele o que mais pratica exercício na serra. No
+intanto, esta diferença vem-se a reduzir, visto existir um número
+crescente de indivíduos do sexo feminino, a praticarem
+atividades no exterior. 
+</p>
+
+<p>
+Em uma análise do poder de compra dos nossos clientes, ela aponta para
+elementos da classe média baixa e classe média. Embora a classe média
+alta e rica também possa vir a utilizar os nossos serviços, por uma
+questão de moda.
 </p>
 </div>
 </div>
@@ -908,7 +932,7 @@ entrega de bens.</div></div>
 </div></div>
 <div id="postamble" class="status">
 <p class="author">Author: Luis Moura, Diana Rodrigues</p>
-<p class="date">Created: 2016-11-01 Tue 20:03</p>
+<p class="date">Created: 2016-11-01 Tue 20:22</p>
 <p class="validation"><a href="http://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
